[workspace]
members = ["croncat", "croncatd"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
debug = true

[patch.crates-io]
cosm-orc = { git = "https://github.com/elys-network/cosm-orc.git", branch = "dependencies-fix" }
cosm-tome = { git = "https://github.com/elys-network/cosm-tome.git", branch = "dependencies-fix", features = [
    "rpc",
    "cosmwasm",
    "grpc",
] }
